# Calc

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.cli  README.md  api.py  calc.py  changelog.md  changelog.txt  customerr.py  docker-compose.yaml  filter.py  interpreter.py  lexer.py  main.py  nodes.py  parser.py  prod.env  pyproject.toml  requirements.txt  run_server.py  tokens.py  utils.py
.github/workflows/: test-code.yml
api/: app.py  metadata.py
calc/: __init__.py  app.py  cli.py  customerr.py  executor.py  filter.py  interpreter.py  lexer.py  metadata.py  nodes.py  parser.py  tokens.py  utils.py
tests/: calc_basic_test.py  conftest.py  test_basic_calc_execute.py  test_calc_api.py  test_calc_operation.py  test_calc_website.py
tests/intregrated_test/: calc_basic_test.py
website/: index.html  script.js  style.css
