[tool.poetry]
name = "calc"
version = "0.1.0"
description = "a simple python calculator scripting language"
authors = ["Jeel Dobariya <dobariyaj34@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
colorama = "^0.4.6"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
pylint = "^3.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.2"

[tool.poetry.scripts]
calc = 'calc:run_cli'

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"